# MoonBugs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: release.yml
assets/: icon_16.rgba  icon_32.rgba  icon_64.rgba
packaging/: moonbugs.desktop
src/: main.rs
tools/: bundle_macos.sh  gen_icon.py  gen_music.py  gen_sounds.py  install_linux.sh
