[package]
name = "moonbugs"
version = "0.1.0"
edition = "2021"
description = "Moon Bugs — Lunar Defense: a modern macroquad homage to Windmill Software's 1983 arcade game"

[dependencies]
# macroquad ships with NO default features, so the audio backend (quad-snd)
# must be enabled explicitly or sound calls become silent no-op stubs.
macroquad = { version = "0.4", features = ["audio"] }

[build-dependencies]
# Embeds the .exe icon on Windows targets (no-op elsewhere); see build.rs.
winresource = "0.1"

# Optimized release builds make the game smooth and snappy.
[profile.release]
opt-level = 3
lto = true
